--- a/package.json
+++ b/package.json
@@ -13,18 +13,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.2.0",
-    "@angular/common": "^5.2.0",
-    "@angular/compiler": "^5.2.0",
-    "@angular/core": "^5.2.0",
+    "@angular/common": "^5.2.2",
+    "@angular/compiler": "^5.2.2",
+    "@angular/core": "^5.2.2",
     "@angular/forms": "^5.2.0",
     "@angular/http": "^5.2.0",
-    "@angular/platform-browser": "^5.2.0",
-    "@angular/platform-browser-dynamic": "^5.2.0",
+    "@angular/platform-browser": "^5.2.2",
+    "@angular/platform-browser-dynamic": "^5.2.2",
     "@angular/router": "^5.2.0",
     "angular2-flash-messages": "^2.0.5",
-    "angularfire2": "^5.0.0-rc.4",
+    "angularfire2": "^2.0.0-beta.8",
     "core-js": "^2.4.1",
-    "firebase": "^4.9.0",
+    "firebase": "^3.6.10",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
